# TRASH2

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README_EN.md  output.json  run.bat  setup.bat
.github/workflows/: cmake-single-platform.yml
include/: command.h  core.h  fswalk.h  interact.h  prompt.h  zconsole.h
src/: CMakeLists.txt  command.cpp  console.cpp  core.cpp  core.h  dump.cc  folderinfo.cc  fswalk.cpp  interact.cpp  main.cpp  prompt.cpp  zconsole.cpp  zconsole.h
src/zconsole/: CMakeLists.txt  prompt.cc  zconsole.cc  zconsole.h
src/zcore/: CMakeLists.txt  fdnode.cc  zutils.cc  zutils.h
src/zfs/: CMakeLists.txt  fdnode.cc  fdnode.h  zutils.cc  zutils.h
test/: CMakeLists.txt  test_fdnode.cpp
test/zconsole/: CMakeLists.txt  test.cpp
test/zcore/: CMakeLists.txt
